ZYBO/zybo_vivado_proj/zybo_vivado_proj.sdk/.metadata/.plugins/org.eclipse.cdt.ui/zyboApp.build.log
22:57:42 **** Auto Build of configuration Debug for project zyboApp ****
make all 
'Building file: ../src/OLED/OledDriver.cpp'
'Invoking: ARM g++ compiler'
arm-xilinx-eabi-g++ -Wall -O0 -g3 -I../../standalone_bsp_0/ps7_cortexa9_0/include -I../inc -c -fmessage-length=0 -MT"src/OLED/OledDriver.o" -MMD -MP -MF"src/OLED/OledDriver.d" -MT"src/OLED/OledDriver.d" -o "src/OLED/OledDriver.o" "../src/OLED/OledDriver.cpp"
In file included from ../../standalone_bsp_0/ps7_cortexa9_0/include/xspi.h:304:0,
                 from ../src/OLED/OledDriver.cpp:57:
../src/OLED/OledDriver.cpp: In function 'void OledHostInit()':
../../standalone_bsp_0/ps7_cortexa9_0/include/xstatus.h:61:41: error: return-statement with a value, in function returning 'void' [-fpermissive]
 #define XST_DEVICE_NOT_FOUND            2L
                                         ^
../src/OLED/OledDriver.cpp:255:10: note: in expansion of macro 'XST_DEVICE_NOT_FOUND'
   return XST_DEVICE_NOT_FOUND;
          ^
../../standalone_bsp_0/ps7_cortexa9_0/include/xstatus.h:60:41: error: return-statement with a value, in function returning 'void' [-fpermissive]
 #define XST_FAILURE                     1L
                                         ^
../src/OLED/OledDriver.cpp:261:10: note: in expansion of macro 'XST_FAILURE'
   return XST_FAILURE;
          ^
../../standalone_bsp_0/ps7_cortexa9_0/include/xstatus.h:60:41: error: return-statement with a value, in function returning 'void' [-fpermissive]
 #define XST_FAILURE                     1L
                                         ^
../src/OLED/OledDriver.cpp:271:10: note: in expansion of macro 'XST_FAILURE'
   return XST_FAILURE;
          ^
../../standalone_bsp_0/ps7_cortexa9_0/include/xstatus.h:60:41: error: return-statement with a value, in function returning 'void' [-fpermissive]
 #define XST_FAILURE                     1L
                                         ^
../src/OLED/OledDriver.cpp:297:10: note: in expansion of macro 'XST_FAILURE'
   return XST_FAILURE;
          ^
../src/OLED/OledDriver.cpp: In function 'void OledDevInit()':
../src/OLED/OledDriver.cpp:404:9: error: 'delay' was not declared in this scope
  delay(1);
         ^
../src/OLED/OledDriver.cpp: In function 'void OledDevTerm()':
../src/OLED/OledDriver.cpp:474:15: error: 'VbatCtrl' was not declared in this scope
  digitalWrite(VbatCtrl, HIGH);
               ^
../src/OLED/OledDriver.cpp:474:25: error: 'HIGH' was not declared in this scope
  digitalWrite(VbatCtrl, HIGH);
                         ^
../src/OLED/OledDriver.cpp:474:29: error: 'digitalWrite' was not declared in this scope
  digitalWrite(VbatCtrl, HIGH);
                             ^
../src/OLED/OledDriver.cpp:475:11: error: 'delay' was not declared in this scope
  delay(100);
           ^
../src/OLED/OledDriver.cpp:479:25: error: 'LOW' was not declared in this scope
  digitalWrite(VbatCtrl, LOW);
                         ^
../src/OLED/OledDriver.cpp: In function 'void OledDisplayOn()':
../src/OLED/OledDriver.cpp:503:15: error: 'DataCmd' was not declared in this scope
  digitalWrite(DataCmd, LOW);
               ^
../src/OLED/OledDriver.cpp:503:24: error: 'LOW' was not declared in this scope
  digitalWrite(DataCmd, LOW);
                        ^
../src/OLED/OledDriver.cpp:503:27: error: 'digitalWrite' was not declared in this scope
  digitalWrite(DataCmd, LOW);
                           ^
../src/OLED/OledDriver.cpp: In function 'void OledDisplayOff()':
../src/OLED/OledDriver.cpp:528:15: error: 'DataCmd' was not declared in this scope
  digitalWrite(DataCmd, LOW);
               ^
../src/OLED/OledDriver.cpp:528:24: error: 'LOW' was not declared in this scope
  digitalWrite(DataCmd, LOW);
                        ^
../src/OLED/OledDriver.cpp:528:27: error: 'digitalWrite' was not declared in this scope
  digitalWrite(DataCmd, LOW);
                           ^
../src/OLED/OledDriver.cpp: In function 'void OledUpdate()':
../src/OLED/OledDriver.cpp:618:16: error: 'DataCmd' was not declared in this scope
   digitalWrite(DataCmd, LOW);
                ^
../src/OLED/OledDriver.cpp:618:25: error: 'LOW' was not declared in this scope
   digitalWrite(DataCmd, LOW);
                         ^
../src/OLED/OledDriver.cpp:618:28: error: 'digitalWrite' was not declared in this scope
   digitalWrite(DataCmd, LOW);
                            ^
../src/OLED/OledDriver.cpp:630:25: error: 'HIGH' was not declared in this scope
   digitalWrite(DataCmd, HIGH);
                         ^
../src/OLED/OledDriver.cpp:611:7: warning: unused variable 'icol' [-Wunused-variable]
  int  icol;
       ^
../src/OLED/OledDriver.cpp: In function 'void OledPutBuffer(int, uint8_t*)':
../src/OLED/OledDriver.cpp:668:10: error: 'spiCon' was not declared in this scope
   bTmp = spiCon.transfer(*rgbTx++);
          ^
../src/OLED/OledDriver.cpp: In function 'uint8_t Spi2PutByte(uint8_t)':
../src/OLED/OledDriver.cpp:694:8: error: 'spiCon' was not declared in this scope
  bRx = spiCon.transfer(bVal);
        ^
make: *** [src/OLED/OledDriver.o] Error 1

22:57:43 Build Finished (took 398ms)

